# red-o-lator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
common/: CMakeLists.txt
common/common/: Logger.cpp  Logger.h  cl.h  common.hpp
common/common/logger/: Logger.cpp  Logger.h
common/common/test/: doctest.h
common/common/utils/: bit-utils.hpp  common.hpp  file-utlis.hpp  map-utils.hpp  optional-utlis.hpp  set-utlis.hpp  string-utils.hpp  time-utils.hpp  vector-utils.hpp
common/debugger/breakpoint/: Breakpoint.h  BreakpointStorage.cpp  BreakpointStorage.h  WorkGroupBreakpointStorage.cpp  WorkGroupBreakpointStorage.h
common/debugger/channel/: Channel.h
common/debugger/exec/: ExecutionContext.h  ExecutionInfo.h
common/debugger/message/: DebuggerMessage.cpp  DebuggerMessage.h  OnException.h  OnPause.h  OnRespondMemory.h  OnRespondRegisters.h  OnStop.h  RequestMemory.h  RequestRegisters.h  Run.h  SetBreakpoint.h  Stop.h
common/ipc/: IPCWrapper.cpp  IPCWrapper.h  IpcClient.cpp  IpcClient.h  IpcServer.cpp  IpcServer.h  ServerJob.h  util.h
common/ipc/proto/: KernelProto.h
common/model/instr/: instr_info.cpp  instr_info.h  instruction.cpp  instruction.h  reg_info.h
common/model/kernel/: Kernel.h  KernelConfig.h
common/model/kernel/arg/: KernelArgumentKind.h  KernelArgumentStore.h
common/model/reg/: RegData.h
common/proto/: command.proto  kernel_request.proto  memory_request.proto  response.proto
debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h  EmulatorWindow.cpp  EmulatorWindow.h  MainFrame.cpp  MainFrame.h  main.cpp  wx.h
debugger/core/: Launch.cpp  Launch.h
debugger/data/: Instruction.h  InstructionView.h  Parameter.h  Preferences.h  RegDiff.h
debugger/gui/: CodeViewer.cpp  CodeViewer.h  EmulatorApp.cpp  EmulatorApp.h  Events.h  KernelPanel.cpp  KernelPanel.h  MainFrame.cpp  MainFrame.h  MenuBar.cpp  MenuBar.h  ParametersTable.cpp  ParametersTable.h  RegistersTable.cpp  RegistersTable.h  Toolbar.cpp  Toolbar.h  wx.h
debugger/gui/hex-view/: AddressRows.cpp  AddressRows.h  ColumnLabels.cpp  ColumnLabels.h  HexScrollWindow.cpp  HexScrollWindow.h  MemoryView.cpp  MemoryView.h  hex-utils.h
debugger/gui/resources/: win.rc
debugger/gui/resources/embedded/: abort.c  chip.c  forward.c  next.c  pause.c  play.c  record.c
debugger/resources/: icons.rc
driver/: .gitignore  CMakeLists.txt  TestBinariesPath.h.in
driver/CL/: cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_ext.h  cl_gl.h  cl_platform.h  cl_va_api_media_sharing_intel.h  cl_version.h
driver/install/: register-icd-win.py
driver/pkgconfig/: clrxamdasm.pc.sample
driver/resources/: config-generator.py  rx-550.ini  rx-570.clinfo  rx-570.ini
driver/runtime/: runtime-command-queue.cpp  runtime-command.cpp  runtime-context.cpp  runtime-device.cpp  runtime-event.cpp  runtime-impl.cpp  runtime-kernel.cpp  runtime-memory.cpp  runtime-other.cpp  runtime-platform.cpp  runtime-program.cpp  runtime-sampler.cpp
driver/src/: main.cpp
driver/src/CL/: cl_ext2.h
driver/src/common/: Logger.cpp  Logger.h  common.hpp
driver/src/emulator/: command_executor.cpp  command_executor.h
driver/src/model/: GPUModel.cpp  GPUModel.h
driver/src/runtime/: CLObjectInfoParameterValue.hpp  IcdDispatchTable.cpp  IcdDispatchTable.h  icd.h  rename-api.h  runtime-command-queue.cpp  runtime-command.cpp  runtime-commons.cpp  runtime-commons.h  runtime-context.cpp  runtime-device.cpp  runtime-event.cpp  runtime-kernel.cpp  runtime-memory-buffer.cpp  runtime-memory-image.cpp  runtime-memory.cpp  runtime-other.cpp  runtime-platform.cpp  runtime-program.cpp  runtime-sampler.cpp
driver/test/: disasm-test.cpp  driver-call-test.cpp
driver/test/disasm/: a_plus_b.cl  disasm-test.cpp
emulator/: CMakeLists.txt  main.cpp  note.txt  parser_notes.txt
emulator/alu/: alu.cpp  alu.h  alu_flat.cpp  alu_smem.cpp  alu_sop1.cpp  alu_sop2.cpp  alu_sopc.cpp  alu_sopk.cpp  alu_sopp.cpp  alu_vop1.cpp  alu_vop2.cpp  alu_vop3.cpp
emulator/arch/: wavefront.cpp
emulator/cp/: command_processor.cpp  command_processor.h
emulator/cu/: compute_unit.cpp  compute_unit.h  scalar_unit.cpp  scalar_unit.h  scheduler.cpp  scheduler.h  simd_unit.cpp  simd_unit.h  wf_buffer.cpp  wf_buffer.h
emulator/flow/: dispatcher.cpp  dispatcher.h  kernel.cpp  kernel.h  kernel_config.cpp  kernel_config.h  scheduler.h  wavefront.cpp  wavefront.h  wf_config.h  wf_state.h
emulator/gpu/: cluster.cpp  cluster.h  command_processor.cpp  command_processor.h  command_queue.cpp  command_queue.h  compute_unit.h  dispatcher.cpp  dispatcher.h  gpu.cpp  gpu.h  storage.cpp  storage.h
emulator/instr/: instr_info.cpp  instr_info.h  instruction.cpp  instruction.h  temp.cpp
emulator/instr_set/: instruction.cpp  register.cpp  register_type.h
emulator/main/: KernelLoader.cpp
emulator/reg/: reg_info.h  register.cpp  register.h
emulator/src/: Executor.cpp  Executor.h  commons.h
emulator/src/alu/: alu.cpp  alu.h  alu_flat.cpp  alu_smem.cpp  alu_sop1.cpp  alu_sop2.cpp  alu_sopc.cpp  alu_sopk.cpp  alu_sopp.cpp  alu_vop1.cpp  alu_vop2.cpp  alu_vop3.cpp  alu_vopc.cpp
emulator/src/commons/: commons.cpp  commons.h  parser.cpp  parser.h  util.cpp  util.h
emulator/src/flow/: debug_context.cpp  debug_context.h  kernel_config.cpp  kernel_config.h  register.cpp  register.h  wavefront.cpp  wavefront.h  wf_state.h
emulator/src/gpu/: compute_unit.cpp  compute_unit.h  dispatcher.cpp  dispatcher.h  storage.cpp  storage.h
emulator/src/instr/: instr_info.cpp  instr_info.h  instruction.cpp  instruction.h
emulator/src/main/: KernelLoader.cpp  KernelLoader.h  main.cpp
emulator/src/reg/: reg_info.h  register.cpp  register.h
emulator/src/util/: util.cpp  util.h
emulator/test/: doctest.h
emulator/test/alu/: alu_test.cpp  runner.cpp  sop1_test.cpp  sop2_test.cpp  sopc_test.cpp  sopp_test.cpp  vop1_test.cpp  vop2_test.cpp  vop3_test.cpp  vopc_test.cpp
emulator/test/execution/: wf_exec_test.cpp
emulator/test/util/: util_test.cpp
emulator/test/wavefront_exec/: wf_exec_test.cpp
emulator/util/: util.cpp  util.h
(+70 files in other folders)
